* Rebrand electroneum-blockchain-explorer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ project(myxrm)
 set(SOURCE_HEADERS
         MicroCore.h
 		tools.h
-		monero_headers.h
+		electroneum_headers.h
 		CurrentBlockchainStatus.h)
 
 set(SOURCE_FILES
