Link to ed25519-donna and provide temporary fix for testnet microcore compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,8 @@ set(LIBRARIES
         unbound
         curl
         crypto
-        ssl)
+        ssl
+        ed25519-donna)
 
 if(APPLE)
     set(LIBRARIES ${LIBRARIES} "-framework IOKit")
